# parkingcloudsdk

sdk/: CMakeLists.txt  ReadMe.txt  sdk.sln
sdk/Debug/: parkingcloudapi.lib
sdk/Release/: parkingcloudapi.lib
sdk/api/: ReadMe.txt  api.cpp  api.vcxproj  api.vcxproj.filters  parkcloudsession.c  parkcloudsession.h
sdk/apitest/: ReadMe.txt  apitest.cpp  apitest.vcxproj  apitest.vcxproj.filters  stdafx.cpp
sdk/extref/OpenSSL-Win32/exp/: dasync.exp  libcrypto.exp  libssl.exp  openssl.exp  ossltest.exp
sdk/extref/OpenSSL-Win32/lib/: dasync.lib  openssl.lib  ossltest.lib
sdk/extref/OpenSSL-Win32/lib/MinGW/: libcrypto-1_1.def
sdk/extref/OpenSSL-Win32/lib/VC/: libcrypto32MDd.lib  libcrypto32MT.lib  libcrypto32MTd.lib  libssl32MDd.lib  libssl32MT.lib  libssl32MTd.lib
sdk/key/: cloud_pub_key.pem
